Changes for 2.4.5rc1

New features:
A.F....... [ZBX-1357] updated Brazilian Portuguese translation; thanks to Zabbix translators (Richlv)

Bug fixes:
....I....T [ZBX-9331] changed value type of system.stat[kthr,*] items in "Template OS AIX" to float and added them to "Performance" application (asaveljevs)
........S. [ZBX-9368] fixed possible SQL errors when linking of several templates (Sasha)
A.F....... [ZBX-9343] fixed user ID being zero in audit logs for login/logout actions (Ivo)
..F....... [ZBX-9375] renamed "Latest events" to "Events" in menu popup for trigger map elements and fixed its link not setting corresponding trigger in filter (Ivo)
...G...PS. [ZBX-9251] added missing socket closing to avoid large number of opened sockets (igors)
.......PS. [ZBX-9344] fixed infinite looping in telnet.run[] in case there is no password prompt (asaveljevs, dimir)
..F....... [ZBX-9369] removed validation of DB_ID from user profile for removed medias and fixed incorrect DB_ID validation for arrays in bar reports page (Ivo)
..F....... [ZBX-9348] fixed possibility to enable/disable LLD trigger (Ivo)
..F....... [ZBX-9268] fixed misleading message in discovered object indicator tooltip when deletion date is in the past (Ivo)
..F....... [ZBX-4633] fixed host inventories not displaying all filtered results when record count exceeds global limit (Ivo)
..F....... [ZBX-9286] fixed configuration.import, when trigger expression have a user macro (Oleg)
...G...... [ZBX-9283] improved proc_info item (Windows only) to get more information about the processes (dimir)
..F....... [ZBX-8875] fixed undefined index in screens with dynamic graph prototype elements when host is not selected (Ivo)
..F....... [ZBX-9203] fixed host scripts menu popup not properly displaying script name when name contains HTML tags (Ivo)

--------------------------------------------------------------------------------
Changes for 2.4.4

2.4.4rc1 was released as 2.4.4 without any changes
